--- a/datasite/index.html
+++ b/datasite/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header>
-      <h1>Get MRP data from The Netherlands</h1>
+      <h1>Get MRP data</h1>
     </header>
     <main>
       <button id="getData">Click here to get data!</button>
